--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       context: ./requirements/mariadb
     volumes:
       - mariadbVol:/var/lib/mysql
+    secrets:
+      - mysql_root_password
+      - mysql_password
     networks:
       - inception_network
 
@@ -38,6 +41,13 @@ services:
       - wordpressVol:/var/www/html
     networks:
       - inception_network
+
+secrets:
+  mysql_root_password:
+    file: ./secrets/mysql_root_password.txt
+  mysql_password:
+    file: ./secrets/mysql_password.txt
+
 networks:
   inception_network:
     driver: bridge
