--- a/srcs/requirements/mariadb/conf/50-server.conf
+++ b/srcs/requirements/mariadb/conf/50-server.conf
@@ -1,18 +1,20 @@
-#
-#These groups are read by MariaDB server.
-#Use it for options that only the server (but not clients) should see
-#
-#See the examples of server my.cnf files in /usr/share/mysql
-
-#this is read by the standalone daemon and embedded servers
-[server]
-
-#this is only for the mysqld standalone daemon
+# MariaDB sunucusu (daemon) tarafından okunur. Veritabanı servisini başlatan ana bileşendir. Ana ayarların %90’ı burada olur.
 [mysqld]
 
-#
-# * Basic Settings
-#
+# MariaDB önce my.cnf dosyasını sonra /etc/mysql/mariadb.conf.d/ dizinindeki tüm .cnf dosyalarını ardından da ek yapılandırma dosyalarını okur.
+# Bu dosyada, sunucunun çalışma şekli, bağlantı noktası, veri dizini gibi temel ayarlar bulunur.
+
+# Basit ayarlar
+# Bu bölümde, sunucunun temel çalışma ayarları yapılır. Örneğin, hangi kullanıcı tarafından çalıştırılacağı, PID dosyasının konumu, soket dosyasının konumu gibi.
+# user = bu dosyayı çalıştıracak kullanıcıyı belirtir. Genellikle "mysql" kullanıcısıdır.
+# pid-file = sunucu çalışırken oluşturulacak PID dosyasının konumunu belirtir. Bu dosya, sunucunun çalışıp çalışmadığını kontrol etmek için kullanılır.
+# socket = sunucunun dinleyeceği soket dosyasının konumunu belirtir. Bu, yerel bağlantılar için kullanılır.
+# port = sunucunun dinleyeceği bağlantı noktasını belirtir. Genellikle 3306’dır.
+# basedir = MariaDB’nin kurulu olduğu dizini belirtir. Bu, MariaDB’nin temel dizinidir.
+# datadir = veritabanı dosyalarının bulunduğu dizini belirtir. Bu, veritabanı dosyalarının depolandığı yerdir.
+# tmpdir = geçici dosyaların depolanacağı dizini belirtir. Bu, geçici dosyaların depolandığı yerdir.
+# lc-messages-dir = MariaDB’nin dil dosyalarının bulunduğu dizini belirtir. Bu, hata mesajlarının ve diğer metinlerin dilini belirler.
+
 user                    = mysql
 pid-file                = /run/mysqld/mysqld.pid
 socket                  = /run/mysqld/mysqld.sock
@@ -21,55 +23,38 @@ basedir                 = /usr
 datadir                 = /var/lib/mysql
 tmpdir                  = /tmp
 lc-messages-dir         = /usr/share/mysql
-#skip-external-locking
 
-#Instead of skip-networking the default is now to listen only on
-#localhost which is more compatible and is not less secure.
+# Sunucunun dinleyeceği IP adresini belirtir. 0.0.0.0, tüm IP adreslerinden gelen bağlantılara izin verir.
+# Böylece üç farklı container (WordPress, MariaDB, Nginx) arasında iletişim sağlanabilir.
+# Localhost olsaydı bile container'lar arasında iletişim kurulamazdı çünkü her container'ın kendi localhost'u vardır.
 bind-address            = 0.0.0.0
 
-#
-# * Fine Tuning
-#
+## Sunucu ayarları
+
+# Bu bölümde, sunucunun çalışma şekli ile ilgili ayarlar yapılır. Örneğin, bağlantı sayısı, bellek kullanımı, sorgu önbelleği gibi.
+# Bu ayarlar, sunucunun performansını ve davranışını etkiler.
 #key_buffer_size        = 16M
 #max_allowed_packet     = 16M
 #thread_stack           = 192K
 #thread_cache_size      = 8
-# This replaces the startup script and checks MyISAM tables if needed
-# the first time they are touched
-#myisam_recover_options = BACKUP
-#max_connections        = 100
-#table_cache            = 64
-#thread_concurrency     = 10
 
-#
-# * Query Cache Configuration
-#
+## Sorgu önbelleği ayarları
+
+# Bu bölümde, sorgu önbelleği ile ilgili ayarlar yapılır. Sorgu önbelleği, sık kullanılan sorguların sonuçlarını önbelleğe alarak performansı artırır. Bu ayarlar, sorgu önbelleğinin boyutunu, sınırlarını ve davranışını belirler.
+
 #query_cache_limit      = 1M
 query_cache_size        = 16M
 
-#
-# * Logging and Replication
-#
-# Both location gets rotated by the cronjob.
-# Be aware that this log type is a performance killer.
-# As of 5.1 you can enable the log at runtime!
+## Loglama ayarları
+
+# Bu bölümde, sunucunun loglama ayarları yapılır. Loglama, sunucunun çalışma durumunu, hatalarını ve sorgularını kaydeder.
+
 #general_log_file       = /var/log/mysql/mysql.log
 #general_log            = 1
-#
-# Error log - should be very few entries.
-#
+
+# Error log dosyası, sunucunun hata mesajlarını kaydeder. Bu dosya, sunucunun çalışması sırasında oluşan hataları ve uyarıları içerir.
 log_error = /var/log/mysql/error.log
-#
-# Enable the slow query log to see queries with especially long duration
-#slow_query_log_file    = /var/log/mysql/mariadb-slow.log
-#long_query_time        = 10
-#log_slow_rate_limit    = 1000
-#log_slow_verbosity     = query_plan
-#log-queries-not-using-indexes
-#
-# The following can be used as easy to replay backup logs or for replication.
-# note: if you are setting up a replication slave, see README.Debian about
-#       other settings you may need to change.
+
 #server-id              = 1
 #log_bin                = /var/log/mysql/mysql-bin.log
 expire_logs_days        = 10
@@ -77,57 +62,11 @@ expire_logs_days        = 10
 #binlog_do_db           = include_database_name
 #binlog_ignore_db       = exclude_database_name
 
-#
-# * Security Features
-#
-# Read the manual, too, if you want chroot!
-#chroot = /var/lib/mysql/
-#
-# For generating SSL certificates you can use for example the GUI tool "tinyca".
-#
-#ssl-ca = /etc/mysql/cacert.pem
-#ssl-cert = /etc/mysql/server-cert.pem
-#ssl-key = /etc/mysql/server-key.pem
-#
-# Accept only connections using the latest and most secure TLS protocol version.
-# ..when MariaDB is compiled with OpenSSL:
-#ssl-cipher = TLSv1.2
-# ..when MariaDB is compiled with YaSSL (default in Debian):
-#ssl = on
+## Karakter seti ve karşılaştırma düzeni ayarları
 
-#
-# * Character sets
-#
-# MySQL/MariaDB default is Latin1, but in Debian we rather default to the full
-# utf8 4-byte character set. See also client.cnf
-#
+# apt-get ile kurulan MariaDB, Latin1 karakter seti ile başlar. Bu, Türkçe karakterler ve emoji gibi karakterleri düzgün saklayamaz.
+# Bu ayarlar, MariaDB’nin karakter setini ve karşılaştırma düzenini UTF8MB4 olarak ayarlar.
+# SHOW VARIABLES LIKE 'character_set_server';
+
 character-set-server  = utf8mb4
 collation-server      = utf8mb4_general_ci
-
-#
-# * InnoDB
-#
-# InnoDB is enabled by default with a 10MB datafile in /var/lib/mysql/.
-# Read the manual for more InnoDB related options. There are many!
-
-#
-# * Unix socket authentication plugin is built-in since 10.0.22-6
-#
-# Needed so the root database user can authenticate without a password but
-# only when running as the unix root user.
-#
-# Also available for other users if required.
-# See https://mariadb.com/kb/en/unix_socket-authentication-plugin/
-
-# this is only for embedded server
-[embedded]
-
-# This group is only read by MariaDB servers, not by MySQL.
-# If you use the same .cnf file for MySQL and MariaDB,
-# you can put MariaDB-only options here
-[mariadb]
-
-# This group is only read by MariaDB-10.3 servers.
-# If you use the same .cnf file for MariaDB of different versions,
-# use this group for options that older servers don't understand
-[mariadb-10.3]
