--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -20,12 +20,15 @@ RUN mkdir -p /etc/nginx/ssl /var/log/nginx /var/www/html && \
 # Server konfigürasyonunu kopyala
 COPY conf/server.conf /etc/nginx/sites-enabled/
 
+RUN ln -sf /dev/stdout /var/log/nginx/access.log && \
+    ln -sf /dev/stderr /var/log/nginx/error.log
+
 # SSL sertifikası oluştur
 RUN openssl req -x509 -nodes -days 365 \
     -newkey rsa:2048 \
     -keyout /etc/ssl/private/ssl.key \
     -out /etc/ssl/certs/ssl.crt \
-    -subj "/C=TR/ST=ISTANBUL/L=ESENLER/O=42/CN=relvan.42.fr" && \
+    -subj "/C=TR/ST=ISTANBUL/L=SARIYER/O=42/CN=relvan.42.fr" && \
     chmod 600 /etc/ssl/private/ssl.key && \
     chmod 644 /etc/ssl/certs/ssl.crt
 
