--- a/srcs/requirements/nginx/conf/server.conf
+++ b/srcs/requirements/nginx/conf/server.conf
@@ -21,6 +21,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$args;
+        index index.php index.html index.htm;
     }
     
     location ~ \.php$ {
@@ -30,7 +31,6 @@ server {
         fastcgi_pass      wordpress:9000;
     }
 
-    # Gizli dosyaları engelle
     location ~ /\. {
         deny all;
     }
