--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -10,13 +10,19 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 pm.max_requests = 500
 
+listen.owner = www-data
+listen.group = www-data
+catch_workers_output = yes
+clear_env = no
+
+
+
 php_admin_value[memory_limit] = 256M
 php_admin_value[error_log] = /var/log/php7.4-fpm.log
 php_admin_flag[log_errors] = on
 php_admin_value[error_reporting] = E_ALL
 php_admin_flag[display_errors] = off
 
-; WordPress için önemli ayarlar
 php_admin_value[upload_max_filesize] = 64M
 php_admin_value[post_max_size] = 64M
 php_admin_value[max_execution_time] = 300
