--- a/srcs/.env
+++ b/srcs/.env
@@ -2,16 +2,16 @@
 DOMAIN_NAME=relvan.42.fr
 
 # MySQL/MariaDB ayarları
-MYSQL_ROOT_PASSWORD=root_password_123
 MYSQL_DATABASE=wordpress
-MYSQL_USER=wpuser
-MYSQL_PASSWORD=wpuser_password_123
+MYSQL_USER=relvan
+MYSQL_PASSWORD=relvan_password_123
+MYSQL_ROOT_PASSWORD=root_password_123
 
 # WordPress ayarları
-WP_TITLE=Inception WordPress
+WP_TITLE=Nektari WordPress
 WP_ADMIN_USER=nektari
 WP_ADMIN_PASSWORD=incir123
-WP_ADMIN_EMAIL=uzum@relvan.42.fr
+WP_ADMIN_EMAIL=nektari@student.42.fr
 WP_USER=relvan
 WP_USER_EMAIL=relvan@student.42.fr
 WP_USER_PASSWORD=relvan123
