nolur 500 hatası alma artık bıktım

--- a/srcs/.env
+++ b/srcs/.env
@@ -15,3 +15,10 @@ WP_ADMIN_EMAIL=nektari@student.42.fr
 WP_USER=relvan
 WP_USER_EMAIL=relvan@student.42.fr
 WP_USER_PASSWORD=relvan123
+WP_URL=https://relvan.42.fr
+
+CERT_COUNTRY=TR
+CERT_STATE=Istanbul
+CERT_CITY=Istanbul
+CERT_ORG=42Istanbul
+CERT_COMMON_NAME=https://relvan.42.fr
