--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,52 +2,58 @@ version: '3.7'
 
 services:
   mariadb:
-    container_name: mariadb
-    restart: always
-    expose:
-      - "3306"
-    env_file: .env
+    image: mariadb
     build:
       context: ./requirements/mariadb
+      dockerfile: Dockerfile
+    container_name: mariadb
+    env_file: .env
     volumes:
       - mariadbVol:/var/lib/mysql
     networks:
-      - inception_network
+      - inception-network
+    expose:
+      - "3306"
+    restart: always
 
   wordpress:
-    container_name: wordpress
-    restart: always
-    expose:
-      - "9000"
-    env_file: .env
-    depends_on:
-      - mariadb
+    image: wordpress
     build:
       context: ./requirements/wordpress
-    volumes: 
-      - wordpressVol:/var/www/html
-    networks:
-      - inception_network
-
-  nginx:
-    container_name: nginx
-    restart: always
-    ports:
-      - "443:443"
+      dockerfile: Dockerfile
+    container_name: wordpress
     env_file: .env
-    depends_on:
-      - wordpress
-    build:
-      context: ./requirements/nginx
     volumes:
       - wordpressVol:/var/www/html
     networks:
-      - inception_network
+      - inception-network
+    expose:
+      - "9000"
+    restart: always
+    depends_on:
+      - mariadb
+
+  nginx:
+    image: nginx
+    build:
+      context: ./requirements/nginx
+      dockerfile: Dockerfile
+    container_name: nginx
+    env_file: .env
+    ports:
+      - "443:443"
+    volumes:
+      - wordpressVol:/var/www/html
+    networks:
+      - inception-network
+    restart: always
+    depends_on:
+      - wordpress
 
 networks:
-  inception_network:
+  inception-network:
     driver: bridge
-    name: inception_network
+    name: inception-network
 
 volumes:
   mariadbVol:
@@ -56,7 +62,6 @@ volumes:
       type: none
       o: bind
       device: /home/relvan/data/mariadb
-
   wordpressVol:
     driver: local
     driver_opts:
