--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,8 +4,8 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    php-fpm \
-    php-mysql \
+    php7.4-fpm \
+    php7.4-mysql \
     mariadb-server \
     mariadb-client \
     gettext-base \
@@ -16,17 +16,14 @@ RUN apt-get update && \
 RUN mkdir -p /run/mysqld && \
     chown mysql:mysql /run/mysqld
 
-COPY ./conf/50-server.conf /etc/mysql/mariadb.conf.d/50-server.cnf
-RUN chmod 644 /etc/mysql/mariadb.conf.d/50-server.cnf
-
-COPY ./tools/init.sql /tmp/set.sql
-RUN chmod 644 /tmp/set.sql
-
 COPY ./tools/setup.sh /usr/local/bin/setup.sh
 RUN chmod +x /usr/local/bin/setup.sh
+
+COPY ./conf/50-server.conf /etc/mysql/mariadb.conf.d/50-server.cnf
+RUN chmod 644 /etc/mysql/mariadb.conf.d/50-server.cnf
 
 EXPOSE 3306
 
 ENTRYPOINT ["/usr/local/bin/setup.sh"]
 
-CMD ["mysqld_safe"]
+CMD ["mysqld", "--init-file=/etc/mysql/init.sql", "--user=mysql", "--console"]
